--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing="20">
     <tr>
       <td><img src="/images/linkedin profile.jpg" alt="jon profile pic"></td>
-      <td><h1>Jonathan Lee</h1>
+      <td><h1>Jonathan Lee test</h1>
         <p>
         <em>
           ipsum dolor, sit amet consectetur
