--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/images/linkedin profile.jpg" alt="jon profile pic"></td>
+      <td><img src="/images/linkedin profile.JPG" alt="jon profile pic"></td>
       <td><h1>Jonathan Lee</h1>
         <p>
         <em>
