--- a/index.html
+++ b/index.html
@@ -1,91 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jonathan's Personal Site</title>
+  <meta charset="utf-8">
+  <title>Angela Yu</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/linkedin-profile.JPG" alt="jon profile pic"></td>
-      <td><h1>Jonathan Lee</h1>
-        <p>
-        <em>
-          ipsum dolor, sit amet consectetur
-          <strong>adipisicing elit.</strong>
-        </em>
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur <a href="https://www.linkedin.com/in/jonathan-lee-14374414a/">adipisicing elit.</a> Commodi aliquid
-        autem voluptate consequuntur velit deleniti magnam iure sit labore minus.
-        Ratione vitae veritatis eius quis perspiciatis in vero impedit sed!
-      </p></td>
-    </tr>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
+    <div class="title-text">
+      <h1>I'm Angela.</h1>
+      <h2>a <span class="pro">pro</span>grammer.</h2>
+    </div>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/angela.png" alt="angela-profile-img">
+      <h2>Hello.</h2>
+      <p class="intro">I am an iOS and Web Developer. I'm the founder and CTO of The App Brewery. I ❤️ coffee and brew my own beers.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="code-img" src="https://media.giphy.com/media/3p50WGyUqeU5W/giphy.gif" alt="code-img">
+
+        <h3>Design & Development</h3>
+        <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
+
+      </div>
+      <div class="skill-row">
+        <img class="chilli-img" src="images/chillies.png" alt="chillies-img">
+
+        <h3>Hot Wings Challenge</h3>
+        <p>But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
+
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you love hot wings as much as I do.</h3>
+      <p class="contact-message">Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
+      <a class="btn" href="mailto:ilove@hotwings.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/angela-yu-963a584b/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/yu_angela">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copyright">© 2018 Angela Yu @ The App Brewery.</p>
+  </div>
 </body>
-<hr/>
-
-<h3>Education</h3>
-<ul>
-  <li>TAMU CS</li>
-  <li>TAMU CC</li>
-</ul>
-<hr>
-<h3>Work Experience</h3>
-<table cellspacing = "10">
-  <thead>
-    <tr>
-      <th>Dates</th>
-      <th>Work</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>2009-2010</td>
-      <td>Researcher at The Institute of Cognitive Neurosciences</td>
-    </tr>
-    <tr>
-      <td>2010-2013</td>
-      <td> Lead Developer at Tempo App</td>
-    </tr>
-    <tr>
-      <td>2013-2015</td>
-      <td>Clinical Doctor at the National Health Service</td>
-    </tr>
-  </tbody>
-  <tfoot>
-  </tfoot>
-</table>
-<hr>
-<h3>Skills</h3>
-
-<table cellspacing = "10">
-  <tr>
-    <td>iOS Development</td>
-    <td>⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Web Development</td>
-    <td>⭐⭐⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Photography</td>
-    <td>⭐⭐</td>
-  </tr>
-</table>
-
-
-
-
-
-
-
-
-<hr>
-<a href="hobbies.html">My Hobbies</a>
-<a href="contact-me.html">Contact Me</a>
 
 </html>
