--- a/index.html
+++ b/index.html
@@ -1,65 +1,59 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <title>Angela Yu</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
-  <link rel="icon" href="favicon.ico">
-</head>
-
-<body>
-  <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud">
-    <div class="title-text">
-      <h1>I'm Angela.</h1>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Jonathan's Beautiful Website</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Sacramento&family=Satisfy&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Jonathan .</h1>
       <h2>a <span class="pro">pro</span>grammer.</h2>
+      <img class = "bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
     </div>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-    <img class="mountain" src="images/mountain.png" alt="mountain-img">
-  </div>
-
-  <div class="middle-container">
-    <div class="profile">
-      <img src="images/angela.png" alt="angela-profile-img">
-      <h2>Hello.</h2>
-      <p class="intro">I am an iOS and Web Developer. I'm the founder and CTO of The App Brewery. I ❤️ coffee and brew my own beers.</p>
-    </div>
-    <hr>
-    <div class="skills">
-      <h2>My Skills.</h2>
-      <div class="skill-row">
-        <img class="code-img" src="https://media.giphy.com/media/3p50WGyUqeU5W/giphy.gif" alt="code-img">
-
-        <h3>Design & Development</h3>
-        <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
-
+    <div class="middle-container">
+      <div class="profile">
+        <img class = "profile-img" src="images/linkedin-profile.JPG" alt="jonathan-picture">
+        <h2>Hello.</h2>
+        <p class= "intro-text">I am an alum from Texas A&M University '20. Current web developer-in-training with ambition for creative design!</p>
       </div>
-      <div class="skill-row">
-        <img class="chilli-img" src="images/chillies.png" alt="chillies-img">
-
-        <h3>Hot Wings Challenge</h3>
-        <p>But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
-
+      <hr></hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="code-img" src="https://media.giphy.com/media/SpopD7IQN2gK3qN4jS/giphy.gif" alt="code-img">
+          <h3>Full Stack Development</h3>
+          <p>My love for UI/UX design originated from when I owned my first smartphone back in high school, the Samsung Galaxy s3. I am now looking to challenge myself in the field of web development and design with the goal of developing web applications in the future. </p>
+        </div>
+        <div class="skill-row">
+          <img class="pep-pizza" src="images/pep-pizza.png" alt="pep-pizza">
+          <h3>My Greatest Passion</h3>
+          <p>Despite my passion for exploring the ins and outs of web development, there is perhaps nothing I feel stronger about than the dislike for pineapple on pizza. The only "yellow" attribute that belongs on a pizza is a hefty layer of fresh mozarella cheese. </p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>For any inquiries.</h3>
+        <p class= "end-text">Have a project I can work on? Or any tips/advice? I'm always looking for feedback and guidance on how I can improve!</p>
+        <a class="btn" href="mailto:jonguolee@gmail.com">CONTACT ME</a>
       </div>
     </div>
-    <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>If you love hot wings as much as I do.</h3>
-      <p class="contact-message">Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
-      <a class="btn" href="mailto:ilove@hotwings.com">CONTACT ME</a>
+
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/jonathan-lee-14374414a/">LinkedIn</a>
+      <a class="footer-link" href="https://www.facebook.com/jonathan.lee.31105/">Facebook</a>
+      <a class="footer-link" href="https://twitter.com/glee_jon">Twitter</a>
+      <p class="copyright">© 2020 Jonathan Lee.</p>
     </div>
-  </div>
 
 
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/angela-yu-963a584b/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/yu_angela">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p class="copyright">© 2018 Angela Yu @ The App Brewery.</p>
-  </div>
-</body>
+    </div>
 
+  </body>
 </html>
